monkey-c-formatter/tests/snapshots/snapshots__format_inputs@annotation_line_comments.mc.snap
---
source: monkey-c-formatter/tests/snapshots.rs
input_file: monkey-c-formatter/tests/snapshot_inputs/annotation_line_comments.mc
---
(
    :debug // only in debug builds
    :background
)
function spaceSeparated() as Void {}

(
    :debug,     // only in debug builds
    :background // runs in the background
)
function commaSeparated() as Void {}

(
    // explains the group
    :test
    :debug
)
function leadingComment() as Void {}

(
    :typecheck(false) // skip checks
    :debug
)
function withArgs() as Void {}

(
    // nothing annotated yet
)
function emptyGroup() as Void {}

(:a /* inline */ :b)
function blockCommentStaysInline() as Void {}
