monkey-c-formatter/tests/snapshots/snapshots__format_inputs@annotation_separators.mc.snap
---
source: monkey-c-formatter/tests/snapshots.rs
input_file: monkey-c-formatter/tests/snapshot_inputs/annotation_separators.mc
---
(:debug :background)
function spaceSeparated() as Void {}

(:debug, :background)
function commaSeparated() as Void {}

(:test :debug, :background)
function mixedSeparators() as Void {}

(:a /* first */ :b)
function commentBetween() as Void {}
