monkey-c-formatter/tests/snapshots/snapshots__format_inputs@annotation_with_args.mc.snap
---
source: monkey-c-formatter/tests/snapshots.rs
input_file: monkey-c-formatter/tests/snapshot_inputs/annotation_with_args.mc
---
(:typecheck(false))
class C {}

(:test)
function bare() {}

(:foo(1, 2), :bar(:sym))
class D {}

(:debug(true))
module M {
    (:hidden)
    var x = 1;
}
