monkey-c-formatter/tests/snapshots/snapshots__format_inputs@array_blank_line_between_entries.mc.snap
---
source: tests/snapshots.rs
input_file: tests/snapshot_inputs/array_blank_line_between_entries.mc
---
var x = [
    1,

    2,
];
