monkey-c-formatter/tests/snapshots/snapshots__format_inputs@array_entry_inline_trailing_comment.mc.snap
---
source: tests/snapshots.rs
input_file: tests/snapshot_inputs/array_entry_inline_trailing_comment.mc
---
function f() {
    var x = [
        1,
        2, // mid
        3
    ];
}
