monkey-c-formatter/tests/snapshots/snapshots__format_inputs@array_inline_trailing_comment_stays_inline.mc.snap
---
source: tests/snapshots.rs
input_file: tests/snapshot_inputs/array_inline_trailing_comment_stays_inline.mc
---
var x = [
    1, // first
    2,
];
