monkey-c-formatter/tests/snapshots/snapshots__format_inputs@array_standalone_comment_between_entries.mc.snap
---
source: monkey-c-formatter/tests/snapshots.rs
input_file: monkey-c-formatter/tests/snapshot_inputs/array_standalone_comment_between_entries.mc
---
var x = [
    1,
    // Some comment
    2,
];
