monkey-c-formatter/tests/snapshots/snapshots__format_inputs@bling_prefixed_paths.mc.snap
---
source: monkey-c-formatter/tests/snapshots.rs
input_file: monkey-c-formatter/tests/snapshot_inputs/bling_prefixed_paths.mc
---
function f(x as $.Toybox.Lang.Number) as $.Lang.Boolean {
    var log = new $.LogMonkey.Logger();
    return log != null;
}
