monkey-c-formatter/tests/snapshots/snapshots__format_inputs@block_comment_after_open_paren.mc.snap
---
source: monkey-c-formatter/tests/snapshots.rs
input_file: monkey-c-formatter/tests/snapshot_inputs/block_comment_after_open_paren.mc
---
function f() {
    foo(/* c */ 1);
    foo(/* a */ /* b */ 1, 2);
    foo(/* c */);
    foo(/* c */ // d
        1
    );
    if (/* c */ x) {}
    var a = new /* ui */ MenuItem("Cancel", null, 1, null);
    var b = new MenuItem(/* c */ 1);
    var c = new /* c */ Foo();
    var d = new /* c */ Foo([1, 2]);
    var e = new MenuItem /* c */(1);
    var f = new MenuItem /* c */();
    var g = new Foo /* c */([1, 2]);
    var h = new // c
        Foo(1);
    foo /* c */();
    foo /* a */ /* b */(/* c */ 1);
    a.b().foo /* c */(1).c();
    foo // c
        (1);
}
